<resources>
    <string name="app_name">AndroidApplication</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signup">signup</string>
    <string name="email">email</string>
    <string name="api_url">https://api.thecatapi.com/v1/images/search</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="want_to_create_an_account_click_here">Want to create an account? Click here!</string>
    <string name="already_have_an_account_click_here">Already have an account? Click here!</string>
    <string name="new_cat">New Cat</string>
    <string name="american_curl">American Curl</string>
    <string name="cat_name">Cat name</string>
    <string name="cat_origin">Cat origin</string>
    <string name="description">Description</string>
    <string name="description_text">Description text</string>
    <string name="temperament">Temperament</string>
    <string name="temperament_text">Temperament text</string>
    <string name="cat_collection">Cat Collection</string>
    <string name="inorder">InOrder</string>
    <string name="random">Random</string>
    <string name="backwards">Backwards</string>
    <string name="next">Next</string>
    <string name="mainwindow">MainWindow</string>
    <string name="spy_window">Spy window</string>
    <string name="user">User</string>
    <string name="theme">Theme</string>
    <string name="secret">Secret</string>
</resources>